# personal_api

./: .env.prod  .gitignore  Dockerfile  README.md  _docker-compose.yml  config.py  docker-compose.yml  helpers.py  pyproject.toml  requirements.txt  setup.py  tests.py
app/: crud.py  main.py  models.py  schemas.py
data/nginx/: app.conf
personal_api/: crud.py  database.py  main.py  models.py
