[tool.poetry]
name = "personal_api"
version = "0.1.0"
description = ""
authors = ["zevav <zev@averba.ch>"]

[tool.poetry.dependencies]
python = "^3.8"
click = "=7.0"
websockets = "=8.0.2"
regex = "=2019.8.19"
psycopg2 = "=2.8.4"
six = "=1.12.0"
certifi = "=2019.9.11"
pydantic = "=0.32.2"
sqlalchemy = "=1.3.10"
uvloop = "=0.14.0rc1"
urllib3 = "=1.25.6"
httptools = "=0.0.13"
pytz = "=2019.3"
tzlocal = "=2.0.0"
python-dateutil = "=2.8.0"
dateparser = "=0.7.2"
h11 = "=0.8.1"
uvicorn = "=0.9.1"
chardet = "=3.0.4"
fastapi = "=0.42.0"
requests = "=2.22.0"
idna = "=2.8"
starlette = "=0.12.9"
gunicorn = "^19.9"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
